# benchmark_aleph_alpha_document_question_answering

./: .gitignore  .isort.cfg  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: query_api.py  scan.py
class_definition/: classes.json
prompts/: PROMPT_Document_class_-1.txt  PROMPT_Document_class_0.txt  PROMPT_Document_class_1.txt  PROMPT_Document_class_2.txt  PROMPT_Document_classification.txt  PROMPT_Document_summarization.txt
results/: results.csv
